--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "pyaudio>=0.2.14",
-    "pyautogui>=0.9.54",
+    "pyautogui>=0.9.54 ; sys_platform == 'linux'",
     "torch>=2.7.0",
     "transformers>=4.52.4",
+    "pyobjc-framework-Quartz ; sys_platform == 'darwin'"
 ]
